# weirwood

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  weirwood_1pager.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_python.py  bench_python_stump.py  requirements.txt  run_benchmark.sh  run_benchmark_stump.sh  train_model.py
examples/: bench_fhe_full.rs  bench_fhe_stump.rs  bench_plaintext.rs  fhe_full_inference.rs  fhe_stump_inference.rs  plaintext_inference.rs
src/: error.rs  eval.rs  fhe.rs  lib.rs  model.rs  ubj.rs
src/fhe/: client.rs  context.rs  evaluator.rs  mod.rs  server.rs
tests/: integration.rs
tests/fixtures/: stump_regression.json  trained_binary.json  trained_binary.ubj  trained_binary_expected.json  two_trees_binary.json
