[package]
name = "weirwood"
version = "0.2.0"
edition = "2024"
description = "Privacy-preserving XGBoost inference via Fully Homomorphic Encryption"
license = "MIT"
repository = "https://github.com/matthew-kersting/weirwood"
documentation = "https://docs.rs/weirwood"
keywords = ["fhe", "xgboost", "machine-learning", "cryptography", "privacy"]
categories = ["cryptography", "science"]
readme = "README.md"
exclude = ["weirwood_1pager.md", "benchmarks/"]

[features]
default = []
# Enable the TFHE-rs backend for encrypted inference
tfhe-backend = ["dep:tfhe"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dependencies.tfhe]
version = "0.10"
features = ["shortint", "integer"]
optional = true

[dev-dependencies]
approx = "0.5"
