[package]
name = "weirwood"
version = "0.3.1"
edition = "2024"
description = "Privacy-preserving XGBoost inference via Fully Homomorphic Encryption"
license = "MIT"
repository = "https://github.com/matthew-kersting/weirwood"
documentation = "https://docs.rs/weirwood"
keywords = ["fhe", "xgboost", "machine-learning", "cryptography", "privacy"]
categories = ["cryptography", "science"]
readme = "README.md"
exclude = ["weirwood_1pager.md", "benchmarks/"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
rayon = "1.11.0"

[dependencies.tfhe]
version = "1.5.4"
features = ["shortint", "integer"]

[dev-dependencies]
approx = "0.5.1"
